--- a/Python/static/css/oradio3.css
+++ b/Python/static/css/oradio3.css
@@ -6,11 +6,6 @@
  * @license:      GNU General Public License version 3; https://www.gnu.org/licenses/gpl-3.0.html
  */
 
-/*
- * Oradio generic style choices
- * Colors: https://www.computerhope.com/htmcolor.htm
- */
-
 :root {
 	/* Official Oradio colors */
 	--oradio-text: #EAE7DC;			/* Alabaster */
@@ -21,22 +16,20 @@
 
 	/* Supporting colors */
 	--oradio-list: #363737;			/* Dark Grey */
+	--oradio-success: #3FB858;		/* Bright Green */
 	--oradio-warning: #FFFE00;		/* Yellow */
 	--oradio-error: #FF0000;		/* Red */
 }
 
 body {
 	font-family: 'Roboto', Helvetica, Arial, sans-serif;
-	font-size: 16px;
+	font-size: 16px;	/* Keep at least 16px to prevent zooming in iOS Safari */
 	margin: 0;
 	padding: 0;
 	background-color: var(--oradio-background);
 	color: var(--oradio-text);
 	display: flex;
 	justify-content: center;
-/*
-	align-items: center;
-*/
 	min-height: 100vh;
 }
 
@@ -44,7 +37,7 @@ body {
 	max-width: 400px;
 	width: 100%;
 	padding: 20px;
-	margin-bottom: 60px;		/* allow space for bottom menu */
+	margin-bottom: 60px;	/* allow space for bottom menu */
 }
 
 .logo {
@@ -63,7 +56,7 @@ h1 {
 	border: none;
 	border-radius: 5px;
 	padding: 10px;
-	font-size: 16px;
+	font-size: 20px;
 	margin: 20px 0 20px -10px;
 	text-align: center;
 }
@@ -74,20 +67,43 @@ label {
 	font-weight: bold;
 }
 
-
-/* OMJ: TODO: dropdown icon van select gelijk maken aan dropdown icon van datalist */
-
-select {
+/* Custom select enabling typing own option */
+.custom-select {
 	width: 100%;
-	height: 40px;
-	padding: 10px;
-	margin-bottom: 20px;
-	border-radius: 5px;
-	border: 1px solid #ccc;
-	box-sizing: border-box;
-	font-size: 16px;
-	background-color: var(--oradio-background);
-	color: var(--oradio-text);
+	position: relative;
+	display: inline-block;
+	cursor: pointer;
+}
+.custom-select input {
+	margin-bottom: 0;
+}
+.custom-select .custom-icon {
+	position: absolute;
+	right: 10px;
+	font-size: 20px;
+	transform: translateY(30%);
+	pointer-events: none;	/* Ensures clicking is not blocked */
+}
+
+/* Dropdown options list */
+.options {
+	border: 1px solid var(--oradio-border);
+	display: none;
+	position: absolute;
+	top: 100%;
+	left: 0;
+	right: 0;
+	background-color: var(--oradio-list);
+	z-index: 10;
+	max-height: 200px;
+	overflow-y: auto;
+}
+.options div {
+	padding: 8px;
+	cursor: pointer;
+}
+.options div:hover {
+	background-color: var(--oradio-select);
 }
 
 input {
@@ -104,7 +120,9 @@ input {
 }
 
 button {
-	width: 100%;
+	display: block;
+	width: 90%;
+	margin: 20px auto;
 	height: 40px;
 	background-color: var(--oradio-select);
 	color: var(--oradio-text);
@@ -114,10 +132,7 @@ button {
 	font-size: 16px;
 	font-weight: bold;
 	cursor: pointer;
-	margin-bottom: 20px;
-	align-items: center;
 }
-
 button:hover {
 	filter: brightness(125%);
 }
@@ -130,6 +145,10 @@ ul {
 
 li {
 	margin: 5px 0;
+	display: grid;
+	grid-template-columns: auto auto;
+	align-items: center;
+	padding: 10px 10px 10px 10px;
 }
 
 .notification {
@@ -140,7 +159,7 @@ li {
 }
 
 .success {
-	color: var(--oradio-select);
+	color: var(--oradio-success);
 }
 
 .warning {
