Improved UX behaviour
Add closing options when clicking/tapping outside of input/options

--- a/Python/templates/captiveportal.html
+++ b/Python/templates/captiveportal.html
@@ -152,6 +152,14 @@
 							dropdown.style.display = "none";
 						}, 300);
 					});
+
+					// Hide options when clicking outside the input or outside the options list
+					document.addEventListener("click", function (event)
+					{
+						if (!container.contains(event.target) && dropdown.style.display == "block")
+							dropdown.style.display = "none";
+					});
+
 				});
 
 				// Toggle password visibility
