Clarify Speellijst header
Maak duidelijk dat je speellijsten kan bekijken of beheren

--- a/Python/templates/playlists.html
+++ b/Python/templates/playlists.html
@@ -825,7 +825,7 @@
 			</div>
 
 			<!-- Manage playlists -->
-			<h1 id="playlists">Speellijsten beheren</h1>
+			<h1 id="playlists">Speellijsten bekijken / beheren</h1>
 			<div class="playlists_grid">
 				<div class="custom-select">
 					<input type="text" id="playlist" name="playlist" placeholder="-- Kies een speellijst --" />
@@ -848,7 +848,7 @@
 			</div>
 
 			<!-- Search songs by artist or title -->
-			<h1 id="search_songs">Liedje zoeken</h1>
+			<h1 id="search_songs">Liedjes zoeken</h1>
 			<input style="margin: 0;" id="search" name="search" type="text" placeholder="Typ (deel van) naam van artiest of (deel van) titel" />
 			<button type="text" title="Zoeken" onclick="getSearchSongs()">Zoeken</button>
 
