--- a/Python/templates/menu.html
+++ b/Python/templates/menu.html
@@ -37,7 +37,7 @@ nav a:hover {
 
 <!-- Menu bar -->
 <nav>
-	<a href="/captiveportal"><img src="../static/wifi.png" onclick="show_waiting()" /><br>Network</a>
+	<a href="/network"><img src="../static/wifi.png" onclick="show_waiting()" /><br>Network</a>
 	<a href="/playlists"><img src="../static/playlists.png" onclick="show_waiting()" /><br>Playlists</a>
 	<a href="/status"><img src="../static/status.png" onclick="show_waiting()" /><br>Status</a>
 	<!-- Add other menu items here if needed -->
