--- a/Python/templates/network.html
+++ b/Python/templates/network.html
@@ -12,7 +12,7 @@
 		<link rel="stylesheet" href="../static/css/fontawesome.min.css" />
 		<link rel="stylesheet" href="../static/css/regular.min.css" />
 		<link rel="stylesheet" href="../static/css/oradio3.css" />
-		<link rel="stylesheet" href="../static/css/captiveportal.css" />
+		<link rel="stylesheet" href="../static/css/network.css" />
 
 		<title>Oradio wifi instellen</title>
 
