--- a/Python/templates/menu.html
+++ b/Python/templates/menu.html
@@ -37,8 +37,9 @@ nav a:hover {
 
 <!-- Menu bar -->
 <nav>
-	<a href="/network"><img src="../static/wifi.png" onclick="show_waiting()" /><br>Network</a>
-	<a href="/playlists"><img src="../static/playlists.png" onclick="show_waiting()" /><br>Playlists</a>
+	<a href="/network"><img src="../static/wifi.png" onclick="show_waiting()" /><br>Netwerk</a>
+	<a href="/buttons"><img src="../static/buttons.png" onclick="show_waiting()" /><br>Knoppen</a>
+	<a href="/playlists"><img src="../static/playlists.png" onclick="show_waiting()" /><br>Lijsten</a>
 	<a href="/status"><img src="../static/status.png" onclick="show_waiting()" /><br>Status</a>
 	<!-- Add other menu items here if needed -->
 </nav>
